--- a/notebooks/SimpleClassifierForDocs.ipynb
+++ b/notebooks/SimpleClassifierForDocs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "97d10c4f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": false,
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b084722476c4b9a8",
    "metadata": {
     "ExecuteTime": {
@@ -45,15 +45,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                         Text       Label\n",
-      "0      Bill to:Michael Sparks       BUYER\n",
-      "1        Terms and Conditions  CONDITIONS\n",
-      "2           Date: 03-Jan-1994        DATE\n",
-      "3  DISCOUNT(2.14%): (-)  9.39    DISCOUNT\n",
-      "4      Due Date : 06-Feb-2007    DUE_DATE\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'notebooks\\\\invoices_dataset_final\\\\Annotations\\\\Original_Format'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     20\u001b[39m                     y_train.append(label)\n\u001b[32m     22\u001b[39m \u001b[38;5;66;03m# Iterate over all the JSON files in the folder\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfolder_path\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m     24\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m filename.endswith(\u001b[33m'\u001b[39m\u001b[33m.json\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m     25\u001b[39m         json_file = os.path.join(folder_path, filename)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [WinError 3] The system cannot find the path specified: 'notebooks\\\\invoices_dataset_final\\\\Annotations\\\\Original_Format'"
      ]
     }
    ],
@@ -1335,19 +1334,11 @@
     "# Evaluate the model\n",
     "print(classification_report(y_val, y_pred))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75807138",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -1361,7 +1352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
